fix: prevent layout shift on short pages (About) by reserving scrollbar gutter

--- a/custom.scss
+++ b/custom.scss
@@ -7,6 +7,10 @@ $navbar-bg: white;
 $navbar-fg: black;
 
 /*-- scss:rules --*/
+/* Prevent layout shift when navigating between pages with/without scrollbar */
+html {
+  scrollbar-gutter: stable;
+}
 /* Change listing's post metadata's reading time */
 
 :root {
